# PyProtolinc

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.rst  compile_out.txt  pyproject.toml  pytest.ini  setup.cfg  setup.cfg_backup  setup.py  test_tmp.py  todos.txt
src/pyprotolinc/actuarial/c_src/: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  assumption_sets.h  build_and_run_main.bat  build_and_run_tests.bat  c_valuation.cpp  cmain.cpp  conanfile.txt  cresult.xlsx  cresults.csv  datums_calc.xlsx  my_log.txt  portfolio.h  providers.h  record_projector.h  risk_factors.h  run_config.h  run_result.h  runner.h  test.h  time_axis.h
src/pyprotolinc/actuarial/c_src/docs/: .gitignore  core_readme.md  init.bat
src/pyprotolinc/actuarial/c_src/docs/html/: annotated.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_e05d7e2b1ecd646af5bb94391405f3b5.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  hierarchy.html  index.html  menudata.js
src/pyprotolinc/actuarial/c_src/docs/html/d0/d18/: products_8h_source.html
src/pyprotolinc/actuarial/c_src/docs/html/d0/dc7/: class_record_projector.html
src/pyprotolinc/actuarial/c_src/docs/html/d0/dfc/: class_c_constant_rate_provider.html
src/pyprotolinc/actuarial/c_src/docs/html/d1/d24/: class_time_axis-members.html
src/pyprotolinc/actuarial/c_src/docs/html/d1/d5b/: class_meta_runner.html
src/pyprotolinc/actuarial/c_src/docs/html/d1/d72/: class_c_base_rate_provider.html
src/pyprotolinc/actuarial/c_src/docs/html/d1/d81/: risk__factors_8h_source.html
src/pyprotolinc/actuarial/c_src/docs/html/d1/d9d/: class_c_portfolio-members.html
src/pyprotolinc/actuarial/c_src/docs/html/d2/de2/: cmain_8cpp.html
src/pyprotolinc/actuarial/c_src/docs/html/d3/d96/: class_c_policy_portfolio-members.html
src/pyprotolinc/actuarial/c_src/docs/html/d3/dd8/: struct_run_parameters_term.html
src/pyprotolinc/actuarial/c_src/docs/html/d5/d2d/: struct_period_date.html
src/pyprotolinc/actuarial/c_src/docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  (+1 more)
src/pyprotolinc/actuarial/c_src/docs/xml/: Doxyfile.xml  dir_49e56c817e5e54854c35e136979f97ca.xml  dir_e05d7e2b1ecd646af5bb94391405f3b5.xml  index.xml  indexpage.xml
src/pyprotolinc/actuarial/c_src/html/: cmain_8cpp.html  files.html  globals.html  globals_func.html
src/pyprotolinc/actuarial/c_src/html/search/: all_0.js  all_1.js  all_2.js  functions_2.js  searchdata.js
src/pyprotolinc/actuarial/c_src/latex/: cmain_8cpp.tex  files.tex  refman.tex
src/pyprotolinc/actuarial/c_src/modules/: assumption_sets.h  c_valuation.cpp  c_valuation.h  log.h  payments.h  portfolio.h  products.h  providers.h  record_projector.h  risk_factors.h  run_config.h  run_result.h  runner.h  time_axis.h  utils.h
src/pyprotolinc/actuarial/c_src/tests/: CMakeLists.txt  test_assumptions.h  test_calculations.cpp  test_config.h  test_portfolio.cpp  test_portfolio.h  test_time_axis.cpp  test_time_axis.h
(+240 files in other folders)
