[build-system]
requires = ["setuptools", "wheel", "Cython ~= 3.0.0a11", "numpy"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
strict = true
packages = "pyprotolinc"


[tool.pylint.main]
# Maximum number of characters on a single line.
max-line-length = 119
