[metadata]
name = Protolinc
version = 0.1.3
description = Projection Tool for Life Insurance Cash Flows
long_description = file: README.rst, LICENSE
keywords = actuarial, projection, life, insurance
license = MIT
author = Martin Seehafer
url = github=https://github.com/mseehafer/Protolinc, readthedocs=https://protolinc.readthedocs.io/en/latest/index.html


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    pandas
    pyyaml
    fire
    requests
    openpyxl

package_dir=
    =src
packages = find:


[options.entry_points]
console_scripts =
    protolinc = protolinc.main:main


[options.packages.find]
where=src

[options.extras_require]
DOC =
    sphinx>=5.0.1
    nbsphinx
    sphinx_rtd_theme
    pandoc
