[metadata]
name = PyProtolinc
version = 0.1.5
description = Projection Tool for Life Insurance Cash Flows
long_description = file: README.rst, LICENSE
keywords = actuarial, projection, life, insurance
license = MIT
author = Martin Seehafer
url = https://github.com/mseehafer/PyProtolinc


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    pandas
    pyyaml
    fire
    requests
    openpyxl

package_dir=
    =src
packages = find:


[options.entry_points]
console_scripts =
    pyprotolinc = pyprotolinc.main:main
    protolinc = pyprotolinc.main:main


[options.packages.find]
where=src

[options.extras_require]
DOC =
    sphinx>=5.0.1
    nbsphinx
    sphinx_rtd_theme
    pandoc
